overflow in y direction fixed

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+/* * {
+  border: 2px solid green;
+} */
+
 body {
-  color: var(--bg-color);
+  background-color: var(--bg-color);
 }
