--- a/src/components/hero/Hero.css
+++ b/src/components/hero/Hero.css
@@ -13,7 +13,7 @@
 }
 
 #hero-text-wrapper {
-  width: 99%;
+  width: 97%;
   position: absolute;
   top: 20vh;
   z-index: 10;
