--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -1,7 +1,7 @@
 #nav-wrapper {
   position: absolute;
   top: 40px;
-  width: 99%;
+  width: 97%;
   display: flex;
   justify-content: center;
 }
